index html update

--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
               <a href="#" class="h-full">Menu</a>
             </li>
             <li class="ml-5 hover:text-green-600">
-              <a
-                href="#"
-                class="h-full border-b-4 border-green-700 cursor-pointer"
-                >Rewards</a
-              >
+              <a href="#" class="h-full cursor-pointer">Rewards</a>
             </li>
             <li class="ml-5 cursor-pointer hover:text-green-600">
               <a href="#" class="h-full">Gift Cards</a>
@@ -141,9 +137,9 @@
 
     <!-- section 1 -->
     <section
-      class="bg-no-repeat bg-cover  h-96 bg-ig-hero lg:bg-ig-hero-desk lg:bg-green-100"
+      class="h-full px-10 pt-6 bg-no-repeat bg-cover  pb-44 md:py-20 lg:py-32 xl:py-44 2xl:py-56 bg-ig-hero md:bg-ig-hero-desk md:bg-green-100"
     >
-      <div class="py-10 text-center lg:text-left lg:px-6 lg:py-28">
+      <div class="text-center md:text-left">
         <h1 class="text-2xl font-semibold uppercase lg:text-4xl">
           Free Coffee
         </h1>
@@ -249,7 +245,7 @@
     <section class="flex flex-col justify-center w-full pt-16 bg-green-50">
       <div class="flex-1">
         <h2
-          class="mt-8 text-xl font-medium text-center  lg:text-3xl lg:font-semibold"
+          class="mt-2 text-xl font-medium text-center  lg:text-3xl lg:font-semibold"
         >
           Get your favorites for free
         </h2>
@@ -591,8 +587,10 @@
               Terms of Use
             </h4>
             <p class="mt-4">
-              For full program details visit starbucks.com/rewards/terms opens
-              in new window.
+              For full program details visit
+              <a class="text-green-600 underline hover:no-underline" href="#"
+                >starbucks.com/rewards/terms</a
+              >.
             </p>
             <p class="mt-4">
               * Earn 1 Star per $1 when digitally loading your Starbucks Card
@@ -602,8 +600,11 @@
             <p class="mt-4">
               Starbucks® Rewards benefits are available at participating
               Starbucks stores. Not all stores have the ability to honor Rewards
-              at this time. Visit the Starbucks Store Locator opens in new
-              window and search for locations honoring “Redeem Rewards”.
+              at this time. Visit the
+              <a class="text-green-600 underline hover:no-underline" href="#"
+                >Starbucks Store Locator</a
+              >
+              and search for locations honoring “Redeem Rewards”.
             </p>
             <p class="mt-4">
               Deposit and credit card products provided by JPMorgan Chase Bank,
@@ -667,22 +668,34 @@
               </div>
               <div class="hidden lg:block">
                 <div class="flex flex-col mt-8">
-                  <a class="text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="text-base font-normal text-gray-400 hover:text-black"
+                    href="#"
                     >Our Heritage</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Our Coffee</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Stories and News</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Investor Relations</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Policies and Standards</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Customer Service</a
                   >
                 </div>
@@ -727,19 +740,29 @@
               </div>
               <div class="hidden lg:block">
                 <div class="flex flex-col mt-8">
-                  <a class="text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="text-base font-normal text-gray-400 hover:text-black"
+                    href="#"
                     >Culture and Values</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Inclusion,Diversity,and Equity</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >College Achievement Plan</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >U.S. Careers</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >International Careers</a
                   >
                 </div>
@@ -783,19 +806,29 @@
               </div>
               <div class="hidden lg:block">
                 <div class="flex flex-col mt-8">
-                  <a class="text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="text-base font-normal text-gray-400 hover:text-black"
+                    href="#"
                     >Ethical Sourcing</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Leading in Sustainability</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Strengthening Communities</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Creating Opportunities</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Global Social Impact Report</a
                   >
                 </div>
@@ -839,16 +872,24 @@
               </div>
               <div class="hidden lg:block">
                 <div class="flex flex-col mt-8">
-                  <a class="text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="text-base font-normal text-gray-400 hover:text-black"
+                    href="#"
                     >Landlord Support Center</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Suppliers</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Corporate Gift Card Sales</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Office and Foodservice Coffee</a
                   >
                 </div>
@@ -892,19 +933,29 @@
               </div>
               <div class="hidden lg:block">
                 <div class="flex flex-col mt-8">
-                  <a class="text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="text-base font-normal text-gray-400 hover:text-black"
+                    href="#"
                     >Order on the App</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Order on the Web</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Delivery</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Order and Pickup Options</a
                   >
-                  <a class="mt-6 text-base font-normal text-gray-400" href="#"
+                  <a
+                    class="mt-6 text-base font-normal text-gray-400  hover:text-black"
+                    href="#"
                     >Explore and Find Coffee for Home</a
                   >
                 </div>
@@ -942,7 +993,7 @@
                   ></circle></svg
               ></a>
             </div>
-            <div class="ml-6">
+            <div class="ml-3 sm:ml-6">
               <a href="#"
                 ><svg
                   viewBox="0 0 24 24"
@@ -969,7 +1020,7 @@
                   ></circle></svg
               ></a>
             </div>
-            <div class="ml-6">
+            <div class="ml-3 sm:ml-6">
               <a href="#"
                 ><svg
                   viewBox="0 0 24 24"
@@ -996,7 +1047,7 @@
                   ></circle></svg
               ></a>
             </div>
-            <div class="ml-6">
+            <div class="ml-3 sm:ml-6">
               <a href="#"
                 ><svg
                   viewBox="0 0 24 24"
@@ -1023,7 +1074,7 @@
                   ></circle></svg
               ></a>
             </div>
-            <div class="ml-6">
+            <div class="ml-3 sm:ml-6">
               <a href="#"
                 ><svg
                   viewBox="0 0 24 24"
@@ -1050,7 +1101,7 @@
                   ></circle></svg
               ></a>
             </div>
-            <div class="ml-6">
+            <div class="ml-3 sm:ml-6">
               <a href="#"
                 ><svg
                   viewBox="0 0 24 24"
@@ -1081,11 +1132,21 @@
           <div
             class="flex flex-col mt-4  lg:divide-x-2 lg:divide-gray-500 lg:flex-row"
           >
-            <a class="mt-4 text-base lg:pr-6" href="#">Privacy Policy</a>
-            <a class="mt-4 text-base lg:px-6" href="#">Terms of Use</a>
-            <a class="mt-4 text-base lg:px-6" href="#">CA Supply Chain Act</a>
-            <a class="mt-4 text-base lg:px-6" href="#">Submit Your Idea</a>
-            <a class="mt-4 text-base lg:pl-6" href="#">Cookie Preferences</a>
+            <a class="mt-4 text-base lg:pr-6 hover:underline" href="#"
+              >Privacy Policy</a
+            >
+            <a class="mt-4 text-base lg:px-6 hover:underline" href="#"
+              >Terms of Use</a
+            >
+            <a class="mt-4 text-base lg:px-6 hover:underline" href="#"
+              >CA Supply Chain Act</a
+            >
+            <a class="mt-4 text-base lg:px-6 hover:underline" href="#"
+              >Submit Your Idea</a
+            >
+            <a class="mt-4 text-base lg:pl-6 hover:underline" href="#"
+              >Cookie Preferences</a
+            >
           </div>
         </div>
       </div>
