--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="md:hidden">
             <button
               type="button"
-              class=""
+              class="focus:outline-none"
               aria-controls="mobile-menu"
               aria-expanded="false"
             >
@@ -121,14 +121,14 @@
         </div>
       </nav>
       <div
-        class="flex items-center justify-between flex-1 w-full px-2 mx-auto bg-green-900  md:px-20 sm:h-12 lg:px-24"
+        class="flex items-center justify-between flex-1 w-full px-2 py-3 mx-auto bg-green-900  md:px-20 sm:py-4 lg:px-24"
       >
         <h2 class="flex flex-wrap font-bold text-white uppercase">
           Starbucks Rewards
         </h2>
 
         <button
-          class="flex-shrink-0 h-8 px-2 text-white  ring-white ring-2 rounded-3xl md:hidden"
+          class="flex-shrink-0 h-8 px-2 text-white  ring-white ring-2 rounded-3xl md:hidden focus:outline-none"
         >
           Join in the app
         </button>
@@ -150,12 +150,12 @@
           Join now to start earning Rewards.
         </p>
         <button
-          class="px-4 py-2 mt-5 font-medium text-white bg-green-600  lg:hidden rounded-3xl"
+          class="px-4 py-2 mt-5 font-medium text-white bg-green-600  lg:hidden rounded-3xl focus:outline-none"
         >
           Join in the App
         </button>
         <button
-          class="hidden px-4 py-2 mt-5 font-medium text-white bg-green-600  lg:block rounded-3xl"
+          class="hidden px-4 py-2 mt-5 font-medium text-white bg-green-600  lg:block rounded-3xl focus:outline-none"
         >
           Join now
         </button>
@@ -251,27 +251,27 @@
         </h2>
         <div class="max-w-xl mx-auto mt-5 lg:mt-10">
           <div class="flex justify-between py-5">
-            <button class="flex-grow">
+            <button class="flex-grow focus:outline-none">
               <h3 class="text-2xl font-medium">
                 25 <span class="text-base text-yellow-600">★</span>
               </h3>
             </button>
-            <button class="flex-grow">
+            <button class="flex-grow focus:outline-none">
               <h3 class="text-2xl font-medium">
                 50 <span class="text-base text-yellow-600">★</span>
               </h3>
             </button>
-            <button class="flex-grow">
+            <button class="flex-grow focus:outline-none">
               <h3 class="text-2xl font-medium">
                 150 <span class="text-base text-yellow-600">★</span>
               </h3>
             </button>
-            <button class="flex-grow">
+            <button class="flex-grow focus:outline-none">
               <h3 class="text-2xl font-medium">
                 200 <span class="text-base text-yellow-600">★</span>
               </h3>
             </button>
-            <button class="flex-grow">
+            <button class="flex-grow focus:outline-none">
               <h3 class="text-2xl font-medium">
                 400 <span class="text-base text-yellow-600">★</span>
               </h3>
@@ -634,7 +634,7 @@
           <div class="flex flex-row-reverse justify-between mt-4">
             <div>
               <div class="lg:hidden">
-                <button>
+                <button class="focus:outline-none">
                   <svg
                     viewBox="0 0 24 24"
                     class="valign-middle absoluteCenter"
@@ -706,7 +706,7 @@
           <div class="flex flex-row-reverse justify-between mt-4 lg:ml-8">
             <div>
               <div class="lg:hidden">
-                <button>
+                <button class="focus:outline-none">
                   <svg
                     viewBox="0 0 24 24"
                     class="valign-middle absoluteCenter"
@@ -772,7 +772,7 @@
           <div class="flex flex-row-reverse justify-between mt-4 lg:ml-8">
             <div>
               <div class="lg:hidden">
-                <button>
+                <button class="focus:outline-none">
                   <svg
                     viewBox="0 0 24 24"
                     class="valign-middle absoluteCenter"
@@ -838,7 +838,7 @@
           <div class="flex flex-row-reverse justify-between mt-4 lg:ml-8">
             <div>
               <div class="lg:hidden">
-                <button>
+                <button class="focus:outline-none">
                   <svg
                     viewBox="0 0 24 24"
                     class="valign-middle absoluteCenter"
@@ -899,7 +899,7 @@
           <div class="flex flex-row-reverse justify-between mt-4 lg:ml-8">
             <div>
               <div class="lg:hidden">
-                <button>
+                <button class="focus:outline-none">
                   <svg
                     viewBox="0 0 24 24"
                     class="valign-middle absoluteCenter"
